...
import okhttp3.OkHttpClient
import okhttp3.Request
import okhttp3.RequestBody.Companion.toRequestBody
import java.util.concurrent.TimeUnit
import kotlin.coroutines.cancellation.CancellationException

actual val platformExtraTabLabel: String? = "Network (OkHttp)"

private val okHttpClient: OkHttpClient by lazy {
    OkHttpClient.Builder()
        .callTimeout(10, TimeUnit.SECONDS)
        .addInterceptor(DIModule.networkAgentPlugin.okHttpInterceptor())
        .build()
...
